<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroVisitante">

    <TextView
        android:id="@+id/cadastroVistante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/cadastro_de_visitante"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="139dp"
        android:text="@string/nome"
        app:layout_constraintEnd_toStartOf="@+id/etNome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sobrenome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:text="@string/sobrenome"
        app:layout_constraintEnd_toStartOf="@+id/etSobreNome"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome" />

    <TextView
        android:id="@+id/placaDoCarro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/placa_do_carro"
        app:layout_constraintBottom_toBottomOf="@+id/etPlacaDoCarro"
        app:layout_constraintEnd_toStartOf="@+id/etPlacaDoCarro"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/RG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:text="@string/rg"
        app:layout_constraintEnd_toStartOf="@+id/etRG"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placaDoCarro" />

    <EditText
        android:id="@+id/etNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/etSobreNome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nome" />

    <EditText
        android:id="@+id/etPlacaDoCarro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/placa_do_carro"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/placaDoCarro"
        app:layout_constraintTop_toTopOf="@+id/etSobreNome" />

    <EditText
        android:id="@+id/etSobreNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/sobre_nome"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/sobrenome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sobrenome"
        app:layout_constraintTop_toBottomOf="@+id/sobrenome" />

    <EditText
        android:id="@+id/etRG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="numberSigned"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/RG"
        app:layout_constraintTop_toBottomOf="@+id/etPlacaDoCarro"
        tools:text="RG" />

    <Button
        android:id="@+id/btCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="home"
        android:text="@string/cancelar"
        app:layout_constraintBaseline_toBaselineOf="@+id/btSalvar"
        app:layout_constraintStart_toStartOf="@+id/RG" />

    <Button
        android:id="@+id/btSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:onClick="home"
        android:text="@string/salvar"
        app:layout_constraintEnd_toEndOf="@+id/etRG"
        app:layout_constraintTop_toBottomOf="@+id/etRG" />
</android.support.constraint.ConstraintLayout>